# Smart-villa-controller

./: .gitignore  AGENTS.md  AI_TASK_QUEUE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
.ai/: AI_START_HERE  TASK_LOCKS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
components/hal_kincony/: CMakeLists.txt  MOVED.md  hal_kincony.c  kincony_io_map.c
components/hal_kincony/include/: kincony_io_map.h  kincony_profiles.h
components/hal_svc100/: CMakeLists.txt  MOVED.md  hal_svc100.c
components/hal_svc100/include/: svc100_profile.h
components/svc_hal/: CMakeLists.txt  Kconfig  README.md  hal_board.c
components/svc_hal/include/: hal.h  hal_board.h
components/svc_hal/kincony/: README.md
components/svc_hal/svc100/: README.md
docs/: 00_PROJECT_BIBLE.md  01_PRODUCT_REQUIREMENT.md  02_SYSTEM_ARCHITECTURE.md  03_HARDWARE_SPEC.md  04_HARDWARE_BLOCK.md  05_PCB_DESIGN_GUIDE.md  06_BOM.md  07_FIRMWARE_ARCHITECTURE.md  08_DRIVER_STANDARD.md  09_API_SPEC.md  10_SECURITY_STANDARD.md  11_LOGIC_ENGINE.md  12_WEB_UI.md  13_INSTALLER_GUIDE.md  14_TEST_PLAN.md  15_RELEASE_PROCESS.md  16_MANUFACTURING.md  17_VERSION_HISTORY.md  18_ROADMAP.md  19_CODING_STANDARD.md  20_PIN_ASSIGNMENT_REV_A.md  27_SCHEMATIC_DESIGN_REV_A.md  28_COMPONENT_SELECTION_REV_A.md  30_HAL_ARCHITECTURE.md  40_MQTT_CNX_INTEGRATION.md  ARCHITECTURE.md  BUILD.md  DEVELOPER_TOOLKIT.md  MODULES.md  README_AI.md  (+1 more)
main/: CMakeLists.txt  app_main.c
(+149 files in other folders)
